# friTap

./: .gitignore  .gitmodules  .rnd  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTION.md  DEVELOPMENT.md  Dockerfile  EVALUATION.md  EXAMPLE.md  EXTENDING.md  INTEGRATION.md  MANIFEST.in  Makefile  README.md  RELEASING.md  USAGE.md  _ssl_log.js  compat.yml  compile_agent.bat  compile_agent.sh  custom.js  entrypoint.sh  friTap.py  ip_version_analysis.md  mkdocs.yml  notizen  nss_auswertung.txt  offsets_example.json  package-lock.json  package.json  pattern.json  pcap.py  pyproject.toml  quic_patterns.json  requirements-minimal.txt  requirements.txt  run_tests.py  setup.cfg  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  lint.yml  publish.yml  schema-check.yml
ExampleApp/: build.gradle
ExampleApp/app/: CMakeLists.txt  build.gradle
ExampleApp/app/src/main/java/com/example/sslplayground/: CustomSSLSocketFactory.kt  MainActivity.kt
ExampleApp/app/src/main/res/layout/: activity_main.xml
ExampleApp/app/src/main/res/values/: arrays.xml  strings.xml
ExampleLinux/: Dockerfile  INSTRUCTIONS.md  Makefile  common.h  gnutls_impl.c  openssl_impl.c  sslinterface.h  sslserver  sslserver.c  start_docker.sh  wolfssl_impl.c
Frida Playground/: WolfSSL.ilk  agent.js  agent.ts  data.txt  loader.py  package-lock.json  tsconfig.json  wolfssl.lib
Windows/Clients/: Windows_Clients.sln
Windows/FriTap_Server/: FriTap_Server.cpp  FriTap_Server.sln  FriTap_Server.vcxproj  FriTap_Server.vcxproj.filters
Windows/Servers/: Windows_Servers.sln
Windows/Windows_Example/: Windows_Example.cpp  Windows_Example.sln  Windows_Example.vcxproj  Windows_Example.vcxproj.filters
agent/: bouncycastle.ts  conscrypt.ts  fritap_agent.ts  gnutls.ts  log.ts  mbedTLS.ts  nss.ts  openssl_boringssl.ts  shared.ts  ssl_log.ts  sspi.ts  wolfssl.ts
agent/android/: android_agent.ts  android_java_tls_libs.ts  bouncycastle.ts  conscrypt.ts  cronet_android.ts  flutter_android.ts  gnutls_android.ts  gotls_android.ts  mbedTLS_android.ts  metartc.ts  mono_btls_android.ts  nss_android.ts  openssl_boringssl_android.ts  pattern_android.ts  rustls_android.ts  s2ntls_android.ts  wolfssl_android.ts
agent/core/: context.ts  hook_definition.ts  loader.ts
agent/ios/: cronet_ios.ts  flutter_ios.ts  ios_agent.ts  openssl_boringssl_ios.ts
agent/linux/: cronet_linux.ts  gnutls_linux.ts  gotls_linux.ts  linux_agent.ts  matrixssl_linux.ts  mbedTLS_linux.ts  nss_linux.ts  openssl_boringssl_linux.ts  rustls_linux.ts  s2ntls_linux.ts  wolfssl_linux.ts
agent/macos/: cronet_macos.ts  macos_agent.ts  openssl_boringssl_macos.ts
agent/misc/: socket_tracer.ts
agent/protocols/: base.ts  ipsec.ts  registry.ts  ssh.ts  tls.ts
agent/schemas/: messages.ts
agent/shared/: arm64.test.ts  arm64.ts  boringssl_family_detect.ts  boringssl_hook_chain.ts  boringssl_pattern_hook.ts  boringssl_symbol_hook.ts  bundled_cronet_patterns.ts  deep_symbol_resolution.test.ts  deep_symbol_resolution.ts  frida-test-stubs.ts  generated_constants.ts  hook_contributors.ts  hooking_pipeline.ts  javalib.ts  keylog_length.ts  library_identification.ts  library_scanner.ts  lru.ts  objclib.ts  pairip_blink.ts  pairip_safe_libs.ts  pattern_based_hooking.ts  pipeline_utils.ts  registry.ts  shared.ts  shared_functions.ts  shared_structures.ts  sockaddr.test.ts  sockaddr.ts  socket_fd_tracker.ts  ssl_struct_walk.ts  tls13_secret_recovery.ts  wine_keylog_pattern_hook.test.ts  wine_keylog_pattern_hook.ts
agent/ssl_lib/: cronet.ts  flutter.ts  gnutls.ts  gotls.ts  java_ssl_libs.ts  matrixssl.ts  mbedTLS.ts  monobtls.ts  nss.ts  openssl_boringssl.ts  rustls.ts  s2ntls.ts  wolfssl.ts
agent/util/: anti_root.ts  anti_tamper.ts  (+11 more)
agent_debugger/: __init__.py  memory.py  output.py  registry.py  runner.py
agent_ebpf/: README.md
agent_gdb/: README.md
agent_lldb/: README.md
constraints/: README.md  frida15.txt  frida16.txt  frida17-legacy.txt
create_legacy_agent/: README.md  create_legacy_code.py  package.json  tsconfig.json
create_standalone_release/: android.py  createRelease.py  friTap_release_template.py  pcap.py
dev/: Dockerfile  README.md  check_compat.py  compile_agent.bat  compile_agent.sh  entrypoint.sh  find_ssl_log_secret_offset.py  generate_agent_types.py  generate_standalone.py  install_legacy.py  run_tests.py  setup_dev.py  wine_e2e_test.sh
docs/: README.md  _config.yml  index.md
evaluation/: adb_random_input.py  evaluate_app.py  full_test.sh  full_test.txt  pcap_compare.py  retest_less_than_50.txt  shuffle_test.sh  test_list_interesting.txt  todo_analyse_0_quota.txt  todo_analyse_less_than_50.txt  todo_manual.txt  uninstall_all_apps.sh
example/: README.md  chrome_ssl_intercept.py  diff_captures.py  extract_credentials.py  extract_images_from_tap.py  extract_iocs.py  extract_protobufs.py  library_attribution_report.py  tap_to_har.py
friTap/: __init__.py  _ssl_log.js  _ssl_log_legacy.js  about.py  android.py  api.py  apptap_adapter.py  config.py  connection_index.py  constants.py  core.py  discovery_base.py  error_handler.py  events.py  friTap.py  fritap_agent.js  fritap_utility.py  inspector.py  message_router.py  pcap.py  pcap_utility.py  pipeline.py  session.py  ssl_logger.py
ground_truth/: readme.md
ground_truth/example_app_android/app/: CMakeLists.txt  build.gradle
ground_truth/example_app_android/app/src/androidTest/java/com/example/sslplayground/: ExampleInstrumentedTest.kt
ground_truth/example_app_android/app/src/main/: AndroidManifest.xml
ground_truth/example_app_android/app/src/main/java/com/example/sslplayground/: CustomSSLSocketFactory.kt
ground_truth/example_app_android/app/src/test/java/com/example/sslplayground/: ExampleUnitTest.kt
release/: README.md  createRelease.py  friTap_release_template.py  pcap.py
scripts/: check_public_denylist.sh  denylist.hashes  denylist_tokens.py  lib.sh  publish_public.sh  scrub_public_tree.py  verify_public_build.sh
tests/: README.md  __init__.py  conftest.py  pytest.ini
(+541 files in other folders)
