[metadata]
name = friTap
author = Daniel Baier, Francois Egner, Max Ufer
author_email = daniel.baier@fkie.fraunhofer.de
description = Decrypts and logs a process's SSL/TLS traffic on all major platforms. Further, it allows TLS key extraction.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fkie-cad/friTap
license = GPL v3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Security
    Topic :: Software Development :: Debuggers
keywords = mobile, instrumentation, frida, hook, SSL decryption

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    frida>=15.0.0
    frida-tools>=10.0.0
    AndroidFridaManager
    hexdump
    scapy
    watchdog
    click
    importlib-resources

[options.package_data]
* =
    friTap/_ssl_log.js
    friTap/_ssl_log_legacy.js
    fritap/assets/tcpdump_binaries/tcpdump_arm64_android
    fritap/assets/tcpdump_binaries/tcpdump_arm32_android
    fritap/assets/tcpdump_binaries/tcpdump_x86_64_android
    fritap/assets/tcpdump_binaries/tcpdump_x86_android

[options.entry_points]
console_scripts =
    fritap=friTap.friTap:main

[version]
version_file = friTap/about.py
